src/ui/radarr_ui/system/snapshots/managarr__ui__radarr_ui__system__system_ui_tests__tests__snapshot_tests__system_details_over_system_tab_SystemLogs.snap
---
source: src/ui/radarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│Name                 Interval   Last Execution  Last Duration  Next Execution    ││Trigger    Status      Name                Queued        Started     Duration   │
│Backup               1 hour     now             00:00:17       59 minutes        ││manual     completed   Refresh Monitored D 4 minutes ago 4 minutes a 00:03:03   │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                   ╭  Log Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮                    │
│                   │2025-12-15 16:14:45 UTC|INFO|DownloadDecisionMaker|Processing 545 releases                                                │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
╰───────────────────│                                                                                                                          │────────────────────╯
╭  Logs  ───────────│                                                                                                                          │────────────────────╮
│2025-12-15 16:14:45│                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
